objects/CreditCardsByDniBySegment__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Se manejan las configuraciones de tdc por Dni por Segmento</description>
    <fields>
        <fullName>MaxNumberCreditCards__c</fullName>
        <description>Numero maximo de tarjetas  por segmento</description>
        <label>MaxNumberCreditCards</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months__c</fullName>
        <description>Ventana de tiempo en meses para numero maximo de tarjetas de credito</description>
        <label>Months</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Segmento de Cliente</description>
        <label>Segment</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CreditCardsByDniBySegment</label>
</CustomObject>